Fixed text alignment

--- a/src/css/godden.sass
+++ b/src/css/godden.sass
@@ -132,6 +132,7 @@ p
     .hash 
         line-height: 1.4
         width: 4%
+        margin-top: -2px
 
     .slash
         color: $col_textGrayest
@@ -141,10 +142,10 @@ p
     
 
     .elementLine
-        letter-spacing: 0.06em;
+        letter-spacing: 0.06em
 
-    h3, .elementLine 
-        margin: 5px 0 5px 0
+    h3, .elementLine, .underline
+        margin: 2px 0 2px 0
     
     a
         &:has(i)
